components/sites/envs/prod/homer-dashboard/version.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homer-dashboard
spec:
  template:
    spec:
      containers:
        - name: homer-dashboard
          image: b4bz/homer:v26.08.2 # {"$imagepolicy": "flux-system:homer-dashboard"}
