components/sites/envs/prod/homer-dashboard/ingress.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homer-dashboard
spec:
  parentRefs:
    - name: private-gateway
      namespace: envoy-gateway-system
  hostnames:
    - dashboard.${EXTERNAL_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homer-dashboard
          port: 8080
